[package]
name = "Indicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "indicatorlib"
path = "src/lib.rs"
[dependencies]
serde = {version="1.0.145",features=["derive"]}
serde_json = "1.0.85"
chrono = "0.4.22"
rand = "0.8.5"
rdev = "0.5.1"
aes-gcm = "0.10.1"
tokio = {version="1.21.1",features=["full"]}
reqwest = {version="0.11.12",features = ["blocking", "json"]}
tungstenite = "0.17.3"
url = "2.3.1"
online = "4.0.0"